# gbwt-rs

./: .gitignore  Cargo.toml  README.md  RELEASES.md
src/: algorithms.rs  bwt.rs  gbwt.rs  gbz.rs  headers.rs  internal.rs  lib.rs  metadata.rs  sequences.rs  support.rs
src/algorithms/: tests.rs
src/bwt/: tests.rs
src/gbwt/: builder.rs  tests.rs
src/gbz/: tests.rs
src/metadata/: tests.rs
src/sequences/: tests.rs
src/support/: tests.rs
