[package]
name = "gbz"
version = "0.6.1"
edition = "2024"
description = "GBZ file format for pangenome graphs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jltsiren/gbwt-rs"

[features]
binaries = ["getopts", "libc", "rand", "rayon"]

[dependencies]
simple-sds = { version = "0.4.1" }
#simple-sds = { git = "https://github.com/jltsiren/simple-sds.git", branch = "main" }
zstd = { version = "0.13" }
getopts = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }
rand = { version = "0.9", optional = true }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
rand = "0.9"

[[bin]]
name = "benchmark"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "gbunzip"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "gbz-extract"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "rebuild-gbwt"
required-features = ["binaries"]
test = false
bench = false
doc = false

[[bin]]
name = "build-chains"
required-features = ["binaries"]
test = false
bench = false
doc = false
